<resources>
    <string name="app_name">Contactos</string>
    <string name="action_settings">Settings</string>
    <string name="hint_nombre">Nombre completo</string>
    <string name="hint_telefono">Teléfono</string>
    <string name="hint_correo">Email</string>
    <string name="hint_desc">Descripción Contacto</string>
    <string name="accion_cancelar">Cancelar</string>
    <string name="accion_aceptar">Aceptar</string>
    <string name="fecha_nacimiento">Fecha Nacimiento:</string>
    <string name="fecha_inicial">00/00/00</string>


    <string name="pick_date">cambiar fecha</string>
    
    <string name="app_confirmar">Confirmar Datos</string>


</resources>
